--- a/website/form-register-clean/component.html
+++ b/website/form-register-clean/component.html
@@ -9,6 +9,7 @@
 <body class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
     <!-- Create By Joker Banny -->
 <form>
+    <form action="../web/index.html">
   <div class="flex items-center justify-center h-screen bg-gray-100">
     <div class="bg-white py-6 rounded-md px-10 max-w-lg shadow-md">
       <h1 class="text-center text-lg font-bold text-gray-500">Form Register</h1>
