--- a/website/chocolux-html/index.html
+++ b/website/chocolux-html/index.html
@@ -97,7 +97,7 @@
                       <h1>
                         Cokelat <br>
                         <span>
-                          Emm Enaaakk
+                          Enaaakk
                         </span>
                       </h1>
                       <a href="#">
@@ -124,7 +124,7 @@
                       <h1>
                         Cokelat <br>
                         <span>
-                          Emm Enaaakk
+                          Enaaakk
                         </span>
                       </h1>
                       <a href="#">
@@ -151,7 +151,7 @@
                       <h1>
                         Cokelat <br>
                         <span>
-                          Emm Enaaakk
+                          Enaaakk
                         </span>
                       </h1>
                       <a href="#">
@@ -271,13 +271,13 @@
             </div>
             <div class="detail-box">
               <h6>
-                Yummy <span>chocolate</span>
+                Kue <span>Tar</span>
               </h6>
               <h5>
-                $5.0
+                Rp. 24.500,00
               </h5>
               <a href="">
-                BUY NOW
+                GAS BORONG!!
               </a>
             </div>
           </div>
@@ -287,13 +287,13 @@
             </div>
             <div class="detail-box">
               <h6>
-                Yummy <span>chocolate</span>
+                Stroberi <span>Pie</span>
               </h6>
               <h5>
-                $5.0
+                Rp. 59.000,00
               </h5>
               <a href="">
-                BUY NOW
+                GAS BORONG!!
               </a>
             </div>
           </div>
@@ -303,13 +303,13 @@
             </div>
             <div class="detail-box">
               <h6>
-                Yummy <span>chocolate</span>
+                Kue <span>Putu</span>
               </h6>
               <h5>
-                $5.0
+                Rp. 25.000,00
               </h5>
               <a href="">
-                BUY NOW
+                GAS BORONG!!
               </a>
             </div>
           </div>
@@ -319,13 +319,13 @@
             </div>
             <div class="detail-box">
               <h6>
-                Yummy <span>chocolate</span>
+                Mangga <span>Tart</span>
               </h6>
               <h5>
-                $5.0
+                Rp. 35.000,00
               </h5>
               <a href="">
-                BUY NOW
+                GAS BORONG!!
               </a>
             </div>
           </div>
@@ -342,14 +342,14 @@
         <div class="box">
           <div class="detail-box">
             <h2>
-              Offers on chocolates
+             Penawaran katalog kue
             </h2>
             <h3>
-              Get 5% Offer <br>
-              any Chocolate items
+              Dapatkan diskon sebesar 5% <br>
+              Untuk semua jenis kue
             </h3>
             <a href="">
-              Buy Now
+              Beli Sekarang!
             </a>
           </div>
           <div class="img-box">
@@ -359,7 +359,7 @@
         <div class="btn-box">
           <a href="">
             <span>
-              See More
+              Baca Selengkapnya
             </span>
             <img src="images/color-arrow.png" alt="">
           </a>
@@ -383,7 +383,7 @@
             <div class="client_container">
               <div class="heading_container">
                 <h2>
-                  Testimonial
+                  Pendapat Pembeli
                 </h2>
               </div>
               <div id="customCarousel2" class="carousel slide" data-ride="carousel">
