--- a/website/chocolux-html/index.html
+++ b/website/chocolux-html/index.html
@@ -395,10 +395,10 @@
                       </div>
                       <div class="detail-box">
                         <h4>
-                          Gero Miliya
+                          Ghinoy
                         </h4>
                         <p>
-                          long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it haslong established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it haslong established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has
+                          Adalah founder toko kue paling muda yang pernah tercatat di Indonesia. Mendirikan Toko Kue Ghinuy cabang pertamanya di Jogja pada tahun 2020. Sepanjang karirnya, ia terus mengembangkan serta mngeksplorasi ide-ide seputar dunia per-kue-an serta makanan penutup.
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -411,10 +411,10 @@
                       </div>
                       <div class="detail-box">
                         <h4>
-                          Gero Miliya
+                          Ghinoy
                         </h4>
                         <p>
-                          long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it haslong established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it haslong established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has
+                          Adalah founder toko kue paling muda yang pernah tercatat di Indonesia. Mendirikan Toko Kue Ghinuy cabang pertamanya di Jogja pada tahun 2020. Sepanjang karirnya, ia terus mengembangkan serta mngeksplorasi ide-ide seputar dunia per-kue-an serta makanan penutup.
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -440,11 +440,11 @@
                 <div class="carousel_btn-box">
                   <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
                     <i class="fa fa-arrow-left" aria-hidden="true"></i>
-                    <span class="sr-only">Previous</span>
+                    <span class="sr-only">Sebelumnya</span>
                   </a>
                   <a class="carousel-control-next" href="#customCarousel2" role="button" data-slide="next">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <span class="sr-only">Next</span>
+                    <span class="sr-only">Selanjutnya</span>
                   </a>
                 </div>
               </div>
@@ -466,7 +466,7 @@
             <div class="form_container">
               <div class="heading_container">
                 <h2>
-                  Contact Us
+                  Hubungi Kami
                 </h2>
               </div>
               <form action="">
@@ -484,7 +484,7 @@
                 </div>
                 <div class="d-flex ">
                   <button>
-                    SEND NOW
+                    KIRIM SEKARANG!!
                   </button>
                 </div>
               </form>
@@ -541,19 +541,19 @@
               </h4>
               <div class="info_links_menu">
                 <a href="index.html">
-                  Home
+                  Beranda
                 </a>
                 <a href="about.html">
-                  About
+                  Tentang
                 </a>
                 <a href="chocolate.html">
-                  Chocolates
+                  Cokelat
                 </a>
                 <a href="testimonial.html">
-                  Testimonial
+                  Pendapat Pembeli
                 </a>
                 <a href="contact.html">
-                  Contact us
+                  Hubungi Kami
                 </a>
               </div>
             </div>
@@ -584,7 +584,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="info_detail">
               <h4>
-                Company
+                Perusahaan
               </h4>
               <p class="mb-0">
                 when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
@@ -593,25 +593,25 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <h4>
-              Contact Us
+              Hubungi Kami
             </h4>
             <div class="info_contact">
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Lokasi
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Hubungi 0828734734734
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope"></i>
                 <span>
-                  demo@gmail.com
+                  tokokueghinuy@gmail.com
                 </span>
               </a>
             </div>
@@ -629,7 +629,7 @@
     <div class="container">
       <div class="col-md-11 col-lg-8 mx-auto">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
+          &copy; <span id="displayYear"></span> Semua Hak Cipta
           <a href="login/html.design/">Toko Kue Ghinuy</a>
         </p>
       </div>
