--- a/website/chocolux-html/index.html
+++ b/website/chocolux-html/index.html
@@ -471,16 +471,16 @@
               </div>
               <form action="">
                 <div>
-                  <input type="text" placeholder="Full Name " />
+                  <input type="text" placeholder="Nama" />
                 </div>
                 <div>
-                  <input type="text" placeholder="Phone number" />
+                  <input type="text" placeholder="Nomor Ponsel" />
                 </div>
                 <div>
                   <input type="email" placeholder="Email" />
                 </div>
                 <div>
-                  <input type="text" class="message-box" placeholder="Message" />
+                  <input type="text" class="message-box" placeholder="Pesan" />
                 </div>
                 <div class="d-flex ">
                   <button>
@@ -511,7 +511,7 @@
           <div class="col-md-8 col-lg-9">
             <div class="info_form">
               <form action="">
-                <input type="email" placeholder="Enter your email">
+                <input type="email" placeholder="Masukkan Email">
                 <button>
                   <i class="fa fa-arrow-right" aria-hidden="true"></i>
                 </button>
