--- a/website/chocolux-html/index.html
+++ b/website/chocolux-html/index.html
@@ -395,10 +395,10 @@
                       </div>
                       <div class="detail-box">
                         <h4>
-                          Ghinoy
+                          Miwa
                         </h4>
                         <p>
-                          Adalah founder toko kue paling muda yang pernah tercatat di Indonesia. Mendirikan Toko Kue Ghinuy cabang pertamanya di Jogja pada tahun 2020. Sepanjang karirnya, ia terus mengembangkan serta mngeksplorasi ide-ide seputar dunia per-kue-an serta makanan penutup.
+                          Cake di sini enak banget, lembut dan fresh! Pelayanannya juga ramah, bikin betah. Variasi kuenya banyak, cocok buat semua acara. Harga pas, kualitas oke. Pokoknya recommended banget deh!
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -411,10 +411,10 @@
                       </div>
                       <div class="detail-box">
                         <h4>
-                          Ghinoy
+                          Lio
                         </h4>
                         <p>
-                          Adalah founder toko kue paling muda yang pernah tercatat di Indonesia. Mendirikan Toko Kue Ghinuy cabang pertamanya di Jogja pada tahun 2020. Sepanjang karirnya, ia terus mengembangkan serta mngeksplorasi ide-ide seputar dunia per-kue-an serta makanan penutup.
+                          Kuenya juara, manisnya pas, teksturnya lembut banget. Pelayannya juga asik dan cepat. Tempatnya cozy, cocok buat nongkrong sambil ngemil. Harga? Worth it banget buat rasa segitu. Wajib coba deh!
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
@@ -427,10 +427,10 @@
                       </div>
                       <div class="detail-box">
                         <h4>
-                          Gero Miliya
+                          Yaya
                         </h4>
                         <p>
-                          long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it haslong established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it haslong established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has
+                          Kuenya enak, manisnya pas, lembut banget di lidah! Pelayanannya juga cepat dan ramah, bikin betah buat balik lagi. Variasi kuenya keren, cocok buat semua acara. Harga juga oke, recommended banget deh!
                         </p>
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                       </div>
