--- a/website/chocolux-html/index.html
+++ b/website/chocolux-html/index.html
@@ -484,7 +484,7 @@
                 </div>
                 <div class="d-flex ">
                   <button>
-                    KIRIM SEKARANG!!
+                    PESAN SEKARANG!!!
                   </button>
                 </div>
               </form>
