--- a/website/chocolux-html/about.html
+++ b/website/chocolux-html/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>ChocoLux</title>
+  <title>Toko Kue Ghinuy</title>
 
 
   <!-- bootstrap core css -->
@@ -45,7 +45,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              ChocoLux
+              Toko Kue Ghinuy
             </a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,19 +55,19 @@
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link" href="about.html"> Tentang</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="chocolate.html">Chocolates</a>
+                  <a class="nav-link" href="chocolate.html">Kue</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Testimonial</a>
+                  <a class="nav-link" href="testimonial.html">Pendapat Pembeli</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="contact.html">Hubungi Kami</a>
                 </li>
               </ul>
               <div class="quote_btn-container">
@@ -96,7 +96,7 @@
             <div class="detail-box">
               <div class="heading_container">
                 <h2>
-                  About Our Company
+                  Tentang Perusahaan Kami
                 </h2>
               </div>
               <p>
